--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
+    "jslint": "^0.12.1",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.13.0"
   }
 }
