--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ lib-cov
 coverage
 *.lcov
 
-# nyc _tests_ coverage
+# nyc __tests__ coverage
 .nyc_output
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
