--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "echoes_pi",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "./src/app.js",
   "scripts": {
     "test": "jest"
   },
