--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/app.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "run ./src/app.js"
   },
   "keywords": [],
   "author": "",
