--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/app.js",
   "scripts": {
     "test": "jest",
-    "start": "run ./src/app.js"
+    "start": "node ./src/app.js"
+
   },
   "keywords": [],
   "author": "",
